<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/info_text"
        android:textAlignment="center"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/red_channel_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/red_channel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/red_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
            android:inputType="text"
            android:maxLength="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/green_channel_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/green_channel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/green_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
            android:inputType="text"
            android:maxLength="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/blue_channel_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blue_channel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/blue_channel"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
            android:inputType="text"
            android:maxLength="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/generate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/teal_700"
        android:text="@string/generate_button_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/output_panel"

        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="1dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/output_panel_text"
        android:textColor="#EA0808"
        android:textSize="18sp" />
</LinearLayout>